Revision history for String-Fields

{{$NEXT}}

0.0.6  2021-09-10T00:02:43+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.5  2020-01-27T16:02:47+01:00
    - Remove bogus build dependency, spotted by Altai-man++

0.0.4  2020-01-25T13:21:50+01:00
    - Add support for literal strings to "apply-fields"

0.0.3  2020-01-25T13:10:20+01:00
    - Added ad-hoc support to "apply-fields"
    - Made sure the iterator does Iterator

0.0.2  2020-01-24T18:07:45+01:00
    - Add missing =head2 for "apply-fields"
    - Document the "join" method

0.0.1  2020-01-24T14:55:05+01:00
    - Initial version